--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "next start",
     "cypress:open": "cypress open",
     "cypress": "cypress open"
-
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.3",
@@ -21,7 +20,11 @@
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "cypress": "^10.1.0",
+    "eslint": "8.18.0",
+    "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
   }
